--- a/test/FeatureCheck.Test/FeatureCheck.Test.csproj
+++ b/test/FeatureCheck.Test/FeatureCheck.Test.csproj
@@ -6,6 +6,8 @@
         <IsPackable>false</IsPackable>
 
         <TargetFramework>net7.0</TargetFramework>
+
+        <RootNamespace>Customer.Test</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -22,7 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\samples\Customer.Domain\Customer.Domain.csproj" />
+        <ProjectReference Include="..\..\samples\FeatureCheck.Domain\FeatureCheck.Domain.csproj" />
         <ProjectReference Include="..\..\src\Sekiban.Core\Sekiban.Core.csproj" />
         <ProjectReference Include="..\..\src\Sekiban.Testing\Sekiban.Testing.csproj" />
     </ItemGroup>
