--- a/samples/Shipping.Domain/Shipping.Domain.csproj
+++ b/samples/Shipping.Domain/Shipping.Domain.csproj
@@ -8,7 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Aggregates" />
+      <Folder Include="Aggregates\Orders" />
+      <Folder Include="Aggregates\Products\Commands" />
+      <Folder Include="Aggregates\Products\Events" />
     </ItemGroup>
 
     <ItemGroup>
