--- a/samples/Warehouse.Domain/Warehouse.Domain.csproj
+++ b/samples/Warehouse.Domain/Warehouse.Domain.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Aggregates" />
+      <Folder Include="Aggregates\ProductStocks" />
     </ItemGroup>
 
     <ItemGroup>
