--- a/samples/Warehouse.Domain/Warehouse.Domain.csproj
+++ b/samples/Warehouse.Domain/Warehouse.Domain.csproj
@@ -8,11 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Folder Include="Aggregates\ProductStocks"/>
-    </ItemGroup>
-
-    <ItemGroup>
-        <ProjectReference Include="..\..\src\Sekiban.Core\Sekiban.Core.csproj"/>
+        <ProjectReference Include="..\..\src\Sekiban.Core\Sekiban.Core.csproj" />
+        <ProjectReference Include="..\Shipping.Port\Shipping.Port.csproj" />
+        <ProjectReference Include="..\Warehouse.Port\Warehouse.Port.csproj" />
     </ItemGroup>
 
 </Project>
